# pm64r-racetime-bot

./: COMMANDS.md  README.md  pyproject.toml
randobot/: __main__.py  bot.py  handler.py  pm64r.py  setup.py
